# ChezzeAnimator

./: .gitignore  Animator.cpp  Animator.h  CMakeLists.txt  LICENSE  README.md  easing.h
example/example1/: CMakeLists.txt  UI.cpp  UI.h  entry.cpp
example/example2/: CMakeLists.txt  entry.cpp  ui.h
